# devo

./: .gitignore  AGENT.md  README.md  aiagent.toml  call_function.py  main.py  pyproject.toml  system.md  test.py
.aiagent_toolcheck/: new.txt
.github/workflows/: integration-tests.yml  unit-tests.yml
aiagent/: __init__.py  agent.py  checkpoints.py  cli.py  compaction.py  hooks.py  providers.py  rules.py  session_store.py  settings.py  tools.py  ui.py  workspaces.py
aiagent/tools/: __init__.py  files.py  registry.py
calculator/: script.py
calculator/pkg/: calculator.py  render.py
functions/: edit_file.py  get_file_content.py  get_files_info.py  path_utils.py  run_python_file.py  run_shell_command.py  write_file.py
src/: agent.py  cli.py  compaction.py  hooks.py  session_store.py
src/prompts/: system.md
src/tools/: __init__.py  common.py  files.py  registry.py  shell.py
tests/: test_compaction.py  test_frontend_llm_session.py  test_hooks_and_features.py
tests/fixtures/frontend/src/: App.css  App.jsx
tests/fixtures/frontend/src/components/: Navbar.css  Navbar.jsx
